# toylang-compiler

./: CMakeLists.txt  README.md  dockerfile  flake.nix
.github/workflows/: pipeline.yml
docs/: EBNF.txt
docs/llvm_IR-Codes/: _llvmIR_notes.txt  example.c  funcCall.ll  if_else.ll  whileloop.ll
include/: AST.hpp  Backend.hpp  IR_Generator.hpp  JITengine.hpp  Lexer.hpp  Parser.hpp  Token.hpp
lang_examples/: factorial.toy
src/: main.cpp
src/1_lexer/: Lexer.cpp
src/backend/: Backend.cpp  JITengine.cpp
src/codegen/: IR_Generator.cpp
src/frontend/: AST.cpp  IR_Generator.cpp  Lexer.cpp  Parser.cpp
tests/: test_lexer.cpp  test_parser.cpp
